# ZRenderer

./: CMakeLists.txt  README.md
src/Integrator/: DirectLightingIntegrator.cpp  DirectLightingIntegrator.hpp  Integrator.cpp  Integrator.hpp  PathIntegrator.cpp  PathIntegrator.hpp  PhotonTracer.cpp  PhotonTracer.hpp  WhittedIntegrator.cpp  WhittedIntegrator.hpp
src/accelerator/: BVHAccel.cpp  BVHAccel.hpp
src/camera/: camera.hpp
src/core/: Parser.hpp  Photon.cpp  Photon.hpp  Scene.hpp  ZRender.cpp  ZRender.hpp  buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  geometry.cpp  geometry.hpp  interaction.cpp  interaction.hpp  intersection.hpp  orthographic.cpp  orthographic.hpp  perspective.cpp  perspective.hpp  primitive.cpp  primitive.hpp  scene.cpp  scene.hpp  spectrum.cpp  spectrum.hpp  transform.cpp  transform.hpp
src/ext/stb/: stb_image.h  stb_image_resize.h  stb_image_write.h
src/light/: DiffuseAreaLight.cpp  DiffuseAreaLight.hpp  LightDistribution.cpp  LightDistribution.hpp  PointLight.cpp  PointLight.hpp  SkyBox.cpp  SkyBox.hpp  light.cpp  light.hpp
src/main/: ZRender.cpp  ZRenderer.cpp  main.cpp
src/material/: Fresnel.cpp  Fresnel.hpp  MatteMaterial.cpp  MatteMaterial.hpp  material.hpp  mirror.cpp  mirror.hpp  reflection.cpp  reflection.hpp
src/sampler/: LowDiscrepancy.cpp  LowDiscrepancy.hpp  RNG.cpp  RNG.hpp  clockRand.cpp  clockRand.hpp  halton.cpp  halton.hpp  sampler.cpp  sampler.hpp  sampling.cpp  sampling.hpp
src/shape/: plyRead.cpp  plyRead.hpp  shape.cpp  shape.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp
src/texture/: ConstantTexture.hpp  texture.hpp
